| Bug #10070 | "range" test failure | ||
|---|---|---|---|
| Submitted: | 21 Apr 2005 20:56 | Modified: | 10 May 2005 0:48 |
| Reporter: | Lenz Grimmer | ||
| Status: | Closed | ||
| Category: | Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 4.1.12-pre | OS: | Mac OS X (Mac OS X) |
| Assigned to: | Bugs System | Target Version: | |
[10 May 2005 0:41]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24755
[10 May 2005 0:48]
Sergey Petrunya
Adjusted the .test file accordingly
[10 May 2005 14:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24776

Description: When running the test suite using a "classic" binary (no InnoDB support), the "range" test fails with the following diff: range [ fail ] Errors are (from /Users/mysqldev/powermacg5/test/mysql-classic-4.1.12-apple-darwin7.8.0-powerpc/mysq l-test/var/log/mysqltest-time) : /Users/mysqldev/powermacg5/test/mysql-classic-4.1.12-apple-darwin7.8.0-powerpc/bin/mysqltest: At lin e 469: Result length mismatch (the last lines may be the most important ones) Below are the diffs between actual and expected results: ------------------------------------------------------- *** r/range.result Thu Apr 21 17:59:01 2005 --- r/range.reject Thu Apr 21 19:25:59 2005 *************** *** 586,591 **** --- 586,593 ---- `FUNCTINT` int(11) NOT NULL default '0', KEY `VERI_CLNT~2` (`ARG1`) ) ENGINE=InnoDB DEFAULT CHARSET=latin1; + Warnings: + Warning 1266 Using storage engine MyISAM for table 't1' INSERT INTO t1 VALUES ('000',' 0',' 0','Text 001',0), ('000',' 0',' 1','Text 002',0), ('000',' 1',' 2','Text 003',0), ('000',' 2',' 3','Text 004',0), ('001',' 3',' 0','Text 017',0); ------------------------------------------------------- How to repeat: Compile a binary without InnoDB and run the "range" test. Observe the failure mentioned above.