Applied two patches already commited to the main tree to resolve bugs found during the build:  - removed an "#error PRAGMA" from sql/item_strfunc.h (msvensson)  - Fixed BUG#10070 (range test failed if InnoDB is not available) (sergefp)